[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-minlor"
authors = ["Minlor <40441731+minlor@users.noreply.github.com>"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
test-minlor = "src.hello:main"
